# eur-lex-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.MD  eurlex_expert_search.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: docker-publish.yml
benchmark/: DELIVERABLES.md  QUICK_REFERENCE.md  README.md  all_expressions.csv  all_works.csv  classify_document.py  converter.py  converter_original.py  detailed_inventory.csv  embeddings_to_parquet.py  export_to_csv.py  extract_metadata.py  extract_rdf_metadata.py  index_qdrant.py  list_documents_examples.py  requirements.txt  summary_statistics.csv  usage_examples.py
eval/: README.md  __init__.py  annotation.py  config.py  corpus.py  dataset.py  eurlex_resources.py  evaluation_workplan.md  llm_judge.py  mcp_client.py  metrics.py  pseudo_labels.py  query_generation.py  requirements.txt  run_evaluation.py  utils.py
server/: client.py  server.py
