[project]
name = "eur-lex-mcp"
version = "0.1.0"
description = "MCP server for the EUR-LEX web service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.8.0",
    "zeep>=4.3.1",
    "python-dotenv>=1.1.0",
]

[tool.ruff]
target-version = "py312"

# Files and directories to exclude
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "env",
    "migrations",
]

select = [
    "F",    # pyflakes (basic linting)
    "E",    # pycodestyle (style guide)
    "W",    # pycodestyle (warnings)
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern syntax)
    "B",    # bugbear (common bugs)
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "TCH",  # flake8-type-checking
    "PL",   # pylint rules
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific rules
]

# Enable automatic fixing
fix = true
unsafe-fixes = false

# Allow longer lines if necessary
line-length = 100  

# Import sorting behavior
[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["eur-lex-mcp"]

# Naming conventions
[tool.ruff.pep8-naming]
ignore-names = ["_"]  # Allows `_` as a throwaway variable

[tool.ruff.pyupgrade]
keep-runtime-typing = false

# Optional: Enable stricter settings for testing
[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101", "PLR2004"]  # Ignore assert-used and magic value warnings in tests